fixed footer white space

--- a/src/Pages/Shared/Footer/Footer.css
+++ b/src/Pages/Shared/Footer/Footer.css
@@ -24,3 +24,9 @@
     line-height: 50px;
     text-align: center;
 }
+
+
+.copyright p {
+    margin-top: 0;
+    margin-bottom: 0rem;
+}
